# 3dgo

./: .gitignore  Cargo.toml  README.md  index.html
pkg/: go3d.d.ts  go3d.js  go3d_bg.wasm  go3d_bg.wasm.d.ts  package.json
src/: lib.rs  lib_backup.rs  main.rs  minimal.rs
src/game/: board.rs  mod.rs  rules.rs  stone.rs
src/input/: mod.rs  mouse_picker.rs
src/render/: axis_indicator.rs  camera.rs  graphics.rs  guide_system.rs  mesh.rs  mod.rs  shader.rs  text.rs  ui.rs  ui_panels.rs
src/render/shaders/: basic.wgsl  text.wgsl  transparent.wgsl  ui_panel.wgsl
