[package]
name = "go3d"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17"
winit = "0.27"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
glam = "0.24"
bytemuck = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }

image = "0.24"
cfg-if = "1.0"

instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "go3d"
path = "src/main.rs"

[[bin]]
name = "test_game"
path = "src/bin/test_game.rs"
